@@ -150,13 +150,19 @@ public class Slice2JavaTask extends SliceTask
             String translator;
             if(_translator == null)
             {
-                if(getIceHome() == null)
+                String iceInstall = getIceHome();
+
+                //
+                // If the location of the Ice install is not known, we
+                // rely on a path search to find the translator.
+                //
+                if(iceInstall == null)
                 {
                     translator = "slice2java";
                 }
                 else
                 {
-                    translator = new File(getIceHome() + File.separator + "bin" + File.separator + "slice2java").toString();
+                    translator = new File(iceInstall + File.separator + "bin" + File.separator + "slice2java").toString();
                 }
             }
             else
