@@ -1,6 +1,9 @@
 Changes since version 3.2.0
 ---------------------------     
 
+- Ant Slice tasks now accept a property, ice.home. This property performs the
+  the same function as the ICE_HOME environment variable.
+
 - Fixed object adapter activation deadlock. The deadlock could occur
   when the adapter register its endpoints with the locator registry
   and if another thread invokes concurrently on the locator.
